@@ -78,7 +78,7 @@ exports[`Dispute evidence form needing response, renders correctly 1`] = `
               class="components-form-file-upload"
             >
               <button
-                class="components-button is-primary has-text has-icon"
+                class="components-button is-secondary has-text has-icon"
                 id="form-file-upload-customer_signature"
                 type="button"
               >
@@ -255,7 +255,7 @@ exports[`Dispute evidence form not needing response, renders correctly 1`] = `
               class="components-form-file-upload"
             >
               <button
-                class="components-button is-primary has-text has-icon"
+                class="components-button is-secondary has-text has-icon"
                 disabled=""
                 id="form-file-upload-customer_signature"
                 type="button"
