@@ -23,6 +23,7 @@
 * Fix - Add credit card on My Account using other payment gateways does not show "Your card number is incomplete" error
 * Update - Continue loading WCPay if the account is connected.
 * Add - Message to suggest using the previous version of WooCommerce Payments for old Woo core versions.
+* Fix - Appearance of upload file buttons inside challenge dispute page
 
 = 3.0.0 - 2021-09-16 =
 * Add - Download deposits report in CSV.
